Create structure to grid

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/style.css" ref="stylesheet"/>
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
+    <link href="/style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="purple-box">
+        <p>This box is purple</p>
+      </div>
+      <div class="grey-box">
+        <p>This box is grey</p>
+      </div>
+      <div class="white-box-1">
+        <p>This box is white</p>
+      </div>
+      <div class="white-box-2">
+        <p>This box is also white</p>
+      </div>
+      <div class="black-box">
+        <p>This box is black</p>
+      </div>
+    </div>
+  </body>
 </html>
